--- a/views/Preview.ejs
+++ b/views/Preview.ejs
@@ -441,7 +441,7 @@
           justify-content: center;
           align-items: center;
         "
-        href="http://localhost:5000/access/<%= textModel.accessLink  %>"
+        href=""
         >Step 3</a
       >
     </div>
