--- a/views/Preview.ejs
+++ b/views/Preview.ejs
@@ -455,7 +455,7 @@ main {
 
     <div id="databaseIdPopUp">
       <span>&times;</span>
-      <!-- <h1 style="text-align: center;">Copy below Text To Paste On Next Step <br><%= textId %></h1> -->
+      <h1 style="text-align: center;">https://chronic-mehetabel-workinxdigtial-b3860ccc.koyeb.app/access/<%= textModel.accessLink  %></h1>
       <a
         target="_blank"
         style="
