--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,6 +56,21 @@
         <li>Gift Cards</li>
         <li>Browsing History</li>
         <li>Registry</li>
+        <li>
+          <a
+            href="/logout"
+            style="
+              width: 100%;
+              display: flex;
+              justify-content: flex-end;
+              align-items: center;
+              position: absolute;
+              top: 25%;
+              right: 2%;
+            "
+            ><img width="1%" src="../Img/logout.png" alt="" srcset=""
+          /></a>
+        </li>
       </ul>
     </div>
 
