--- a/views/Preview.ejs
+++ b/views/Preview.ejs
@@ -455,36 +455,27 @@ main {
 
     <div id="databaseIdPopUp">
       <span>&times;</span>
-      <h1 style="text-align: center;">https://chronic-mehetabel-workinxdigtial-b3860ccc.koyeb.app/access/<%= textModel.accessLink  %></h1>
-      <a
-        target="_blank"
-        style="
-          width: 25%;
-          font-size: 1rem;
-          padding: 1rem;
-          margin: 50px 10px 10px 10px;
-          cursor: pointer;
-          background: #000;
-          color: #fff;
-          border: none;
-          border-radius: 8px;
-          text-decoration: none;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        "
-        href=""
-        >Step 3</a
-      >
+      <h1 style="text-align: center;padding-bottom: 3rem;">https://chronic-mehetabel-workinxdigtial-b3860ccc.koyeb.app/access/<%= textModel.accessLink  %></h1>
+      <sl-copy-button value="Copied from a custom button">
+        <sl-icon slot="copy-icon" name="clipboard"></sl-icon>
+        <sl-icon slot="success-icon" name="clipboard-check"></sl-icon>
+        <sl-icon slot="error-icon" name="clipboard-x"></sl-icon>
+      </sl-copy-button>
     </div>
-
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/shoelace.js"></script>
     <script>
       const div = document.getElementById("div");
       const divImg = document.querySelector("#div h2");
       const databaseIdPopUp = document.getElementById("databaseIdPopUp");
+      const databaseIdPopUpH1 = document.querySelector("#databaseIdPopUp h1");
+      const databaseIdPopUpButton= document.querySelector("sl-copy-button");
       const databaseIdPopUpSpan = document.querySelector(
         "#databaseIdPopUp span"
       );
+
+      databaseIdPopUpButton.addEventListener("click",()=>{
+        navigator.clipboard.writeText(databaseIdPopUpH1.textContent);
+      })
 
       const SmallListingImage = document.querySelectorAll("#SmallListingImage");
       const mainBigImage = document.querySelector(".mainBigImage img")
