--- a/views/Preview.ejs
+++ b/views/Preview.ejs
@@ -428,7 +428,7 @@ main {
         >
           <h2
             style="
-              width: 60%;
+              width: 75%;
               font-size: 1rem;
               padding: 1rem;
               margin: 50px 10px 10px 10px;
@@ -442,7 +442,7 @@ main {
               align-items: center;
             "
           >
-            Step 2
+          Generate Preview Link
           </h2>
         </div>
       </div>
