--- a/views/index.ejs
+++ b/views/index.ejs
@@ -306,7 +306,7 @@
               border-radius: 8px;
             "
             type="submit"
-            value="Step 1"
+            value="Submit Content"
           />
         </form>
       </div>
