--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Amazon Tool</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
       <nav>
         <div class="nav01">
-          <img src="https://pngimg.com/uploads/amazon/amazon_PNG11.png" />
+          <img loading="lazy" src="https://pngimg.com/uploads/amazon/amazon_PNG11.png" />
         </div>
         <div class="nav02">
           <div class="nav02img">
-            <img src="../Img/location.png" alt="" srcset="" />
+            <img loading="lazy" src="../Img/location.png" alt="" srcset="" />
           </div>
           <div class="nav02text">
             <span>Deliver To</span><br />
@@ -24,13 +24,13 @@
         <div class="nav03">
           <button>
             All
-            <img src="../public/Img/downward-arrow.png" alt="" srcset="" />
+            <img loading="lazy" src="../Img/downward-arrow.png" alt="" srcset="" />
           </button>
           <input type="text" placeholder="Search Amazon" />
-          <button><img src="../Img/search.png" alt="" srcset="" /></button>
+          <button><img loading="lazy" src="../Img/search.png" alt="" srcset="" /></button>
         </div>
         <div class="nav04">
-          <img src="../Img/Flag_of_the_United_States.png" alt="" srcset="" />
+          <img loading="lazy" src="../Img/Flag_of_the_United_States.png" alt="" srcset="" />
           EN
         </div>
         <div class="nav05">
@@ -68,7 +68,7 @@
               top: 25%;
               right: 2%;
             "
-            ><img width="1%" src="../Img/logout.png" alt="" srcset=""
+            ><img loading="lazy" width="1%" src="../Img/logout.png" alt="" srcset=""
           /></a>
         </li>
       </ul>
@@ -77,10 +77,10 @@
     <main>
       <div class="mainImg">
         <div class="ListingImage">
-          <img src="" alt="" />
+          <img loading="lazy" src="" alt="" />
         </div>
         <div class="mainBigImage image-container" id="image-container">
-          <img src="" alt="" />
+          <img loading="lazy" src="" alt="" />
           <div id="mouse-overlay"></div>
           <div id="overlay"></div>
         </div>
@@ -94,8 +94,8 @@
               <div class="stars">
                 <div class="starNumber">4</div>
                 <div class="starImage">
-                  <img src="../Img/rating.png" alt="" srcset="" />
-                  <img src="../Img/down.png" alt="" srcset="" />
+                  <img loading="lazy" loading="lazy" src="../Img/rating.png" alt="" srcset="" />
+                  <img loading="lazy" src="../Img/down.png" alt="" srcset="" />
                 </div>
               </div>
               <div class="rating">
@@ -155,7 +155,7 @@
           </div>
         </div>
         <div class="sideMenu" onclick="showSideMenu()">
-          <img src="../Img/list.png" alt="" />
+          <img loading="lazy" src="../Img/list.png" alt="" />
         </div>
         <div class="div" style="width: 40%"></div>
         <form
@@ -165,7 +165,7 @@
           enctype="multipart/form-data"
         >
           <span id="removeApp" onclick="removeSideMenu()"
-            ><img src="../Img/x-square.png" alt="" srcset=""
+            ><img loading="lazy" src="../Img/x-square.png" alt="" srcset=""
           /></span>
           <div class="dashboard01">
             <textarea
