--- a/views/index.ejs
+++ b/views/index.ejs
@@ -348,6 +348,16 @@
       </div>
     </main>
     <div class="AplusImage"></div>
+<script>
+      function showSideMenu() {
+        const dashboard = document.querySelector(".dashboard");
+        const sideMenu = document.querySelector(".sideMenu");
+        dashboard.style.transition = "all .5s";
+        dashboard.style.width = "39%";
+        dashboard.style.right = "0%";
+        sideMenu.style.display = "none";
+      }
+    </script>
     <script src="script.js"></script>
   </body>
 </html>
