--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,6 +181,7 @@ main {
   background-color: #222f3e;
   position: absolute;
   overflow: hidden;
+  height: 89%;
   right: -50%;
   font-family: "Poppins", sans-serif;
 }
@@ -448,5 +449,8 @@ main {
   }
   .ratingDiv {
     width: 100%;
+}
+.dashboard {
+  height: 70%;
 }
 }
