--- a/views/AdminPanel.ejs
+++ b/views/AdminPanel.ejs
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
     <link rel="stylesheet" href="/css/admin.css" />
-    <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -136,388 +135,23 @@
           <table>
             <thead>
               <tr>
-                <th>Product Name</th>
-                <th>Product Number</th>
-                <th>Payment</th>
-                <th>Status</th>
+                <th>Preview Link</th>
+                <th>Submission Date</th>
                 <th></th>
               </tr>
             </thead>
             <tbody>
+              <% textModel.forEach(function(text) { %>
               <tr>
-                <td>foldable mini drone</td>
-                <td>98849</td>
-                <td>Due</td>
-                <td class="warning">Pending</td>
-                <td class="primary">Details</td>
+                <td><a href="/access/<%= text.accessLink %>">Preview Link</a></td>
+                <td><%= text.date.toLocaleString() %></td>
               </tr>
-              <tr>
-                <td>foldable mini drone</td>
-                <td>98849</td>
-                <td>Due</td>
-                <td class="warning">Pending</td>
-                <td class="primary">Details</td>
-              </tr>
-              <tr>
-                <td>foldable mini drone</td>
-                <td>98849</td>
-                <td>Due</td>
-                <td class="warning">Pending</td>
-                <td class="primary">Details</td>
-              </tr>
-              <tr>
-                <td>foldable mini drone</td>
-                <td>98849</td>
-                <td>Due</td>
-                <td class="warning">Pending</td>
-                <td class="primary">Details</td>
-              </tr>
-              <tr>
-                <td>foldable mini drone</td>
-                <td>98849</td>
-                <td>Due</td>
-                <td class="warning">Pending</td>
-                <td class="primary">Details</td>
-              </tr>
-              <tr>
-                <td>foldable mini drone</td>
-                <td>98849</td>
-                <td>Due</td>
-                <td class="warning">Pending</td>
-                <td class="primary">Details</td>
-              </tr>
+              <% }); %>
             </tbody>
           </table>
           <a href="#">Show All</a>
         </div>
       </main>
-
-      <!-- Start Product code -->
-      <div class="ProductWrapper" style="margin-top: 1rem">
-        <h1>Dashboard</h1>
-        <div class="date" style="margin-bottom: 1rem">
-          <input type="date" />
-        </div>
-        <header>
-          <nav>
-            <div class="nav01">
-              <img loading="lazy" src="https://pngimg.com/uploads/amazon/amazon_PNG11.png" />
-            </div>
-            <div class="nav02">
-              <div class="nav02img">
-                <img loading="lazy" src="../Img/location.png" alt="" srcset="" />
-              </div>
-              <div class="nav02text">
-                <span>Deliver To</span><br />
-                <span>United States</span>
-              </div>
-            </div>
-            <div class="nav03">
-              <button>
-                All
-                <img loading="lazy" src="../Img/downward-arrow.png" alt="" srcset="" />
-              </button>
-              <input type="text" placeholder="Search Amazon" />
-              <button><img loading="lazy" src="../Img/search.png" alt="" srcset="" /></button>
-            </div>
-            <div class="nav04">
-              <img loading="lazy"
-                src="../Img/Flag_of_the_United_States.png"
-                alt=""
-                srcset=""
-              />
-              EN
-            </div>
-            <div class="nav05">
-              <span>Account & Lists</span>
-            </div>
-            <div class="nav06">
-              <span
-                >Returns <br />
-                & Order</span
-              >
-            </div>
-            <div class="nav07">Cart</div>
-          </nav>
-        </header>
-        <div class="subHeader">
-          <ul>
-            <li>All</li>
-            <li>Today's Deals</li>
-            <li>Customer Service</li>
-            <li>Your Amazon.com</li>
-            <li>Buy Again</li>
-            <li>Sell</li>
-            <li>Gift Cards</li>
-            <li>Browsing History</li>
-            <li>Registry</li>
-            <li>
-              <a
-                href="/logout"
-                style="
-                  width: 100%;
-                  display: flex;
-                  justify-content: flex-end;
-                  align-items: center;
-                  position: absolute;
-                  top: 25%;
-                  right: 2%;
-                "
-                ><img loading="lazy" width="1%" src="../Img/logout.png" alt="" srcset=""
-              /></a>
-            </li>
-          </ul>
-        </div>
-
-        <main>
-          <div class="mainImg">
-            <div class="ListingImage">
-              <img loading="lazy" src="" alt="" />
-            </div>
-            <div class="mainBigImage image-container" id="image-container">
-              <img loading="lazy" src="" alt="" />
-              <div id="mouse-overlay"></div>
-              <div id="overlay"></div>
-            </div>
-          </div>
-          <div class="mainContent" style="position: relative;padding: 10px 0 0 10px;">
-            <div class="Content">
-              <div class="AmazonHeading" style="width: 106%;">
-                <h1 id="AmazonTitle"></h1>
-                <a href="#">Visit the Atlantic Naturals Store</a>
-                <div class="ratingDiv">
-                  <div class="stars">
-                    <div class="starNumber">4</div>
-                    <div class="starImage">
-                      <img loading="lazy" src="../Img/rating.png" alt="" srcset="" />
-                      <img loading="lazy" src="../Img/down.png" alt="" srcset="" />
-                    </div>
-                  </div>
-                  <div class="rating">
-                    <a href="#">851 ratings</a>
-                  </div>
-                  <span>|</span>
-                  <div class="searchPage">
-                    <a href="#">Search this page</a>
-                  </div>
-                </div>
-                <hr width="90%" />
-                <h3 id="Price"></h3>
-              </div>
-              <div class="brandDetail">
-                <div>
-                  <h2>
-                    This item cannot be shipped to your selected delivery
-                    location. Please choose a different delivery location.
-                  </h2>
-                </div>
-                <div>
-                  <table>
-                    <tr>
-                      <td><b>Brand</b></td>
-                      <td id="detail01"></td>
-                    </tr>
-                    <tr>
-                      <td><b>Item Form</b></td>
-                      <td id="detail02"></td>
-                    </tr>
-                    <tr>
-                      <td><b>Manufacturer</b></td>
-                      <td id="detail03"></td>
-                    </tr>
-                    <tr>
-                      <td><b>Item Package Quantity</b></td>
-                      <td id="detail04"></td>
-                    </tr>
-                    <tr>
-                      <td><b>Package Information</b></td>
-                      <td id="detail05"></td>
-                    </tr>
-                  </table>
-                </div>
-                <hr width="90%" />
-              </div>
-              <div id="BulletPoints">
-                <ul>
-                  <h2>About this item</h2>
-                  <li id="AmazonSubTitle01"></li>
-                  <li id="AmazonSubTitle02"></li>
-                  <li id="AmazonSubTitle03"></li>
-                  <li id="AmazonSubTitle04"></li>
-                  <li id="AmazonSubTitle05"></li>
-                  <li id="AmazonSubTitle06"></li>
-                </ul>
-              </div>
-            </div>
-            <div
-              style="top: 1%; right: 1%;"
-              class="sideMenu"
-              onclick="showSideMenu()"
-            >
-              <img loading="lazy" style="width: 80%" src="../Img/list.png" alt="" />
-            </div>
-            <div class="div" style="width: 40%"></div>
-            <form
-              class="dashboard"
-              method="post"
-              action="/admin/dashboard"
-              enctype="multipart/form-data"
-              style="width: 47%; right: 0%; top: 3%"
-            >
-              <span
-                style="right: 0%; top: 0%"
-                id="removeApp"
-                onclick="removeSideMenu()"
-                ><img loading="lazy" src="../Img/x-square.png" alt="" srcset=""
-              /></span>
-              <div class="dashboard01">
-                <textarea
-                  cols="30"
-                  rows="2"
-                  onchange="dashboardHeading(value)"
-                  placeholder="Title...."
-                  name="title"
-                ></textarea>
-              </div>
-              <div class="dashboard02">
-                <textarea
-                  id="input-field01"
-                  cols="30"
-                  rows="1"
-                  placeholder="1. Bullet Points...."
-                  name="bulletPoint01"
-                ></textarea>
-                <textarea
-                  id="input-field02"
-                  cols="30"
-                  rows="1"
-                  placeholder="2. Bullet Points...."
-                  name="bulletPoint02"
-                ></textarea>
-                <textarea
-                  id="input-field03"
-                  cols="30"
-                  rows="1"
-                  placeholder="3. Bullet Points...."
-                  name="bulletPoint03"
-                ></textarea>
-                <textarea
-                  id="input-field04"
-                  cols="30"
-                  rows="1"
-                  placeholder="4. Bullet Points...."
-                  name="bulletPoint04"
-                ></textarea>
-                <textarea
-                  id="input-field05"
-                  cols="30"
-                  rows="1"
-                  placeholder="5. Bullet Points...."
-                  name="bulletPoint05"
-                ></textarea>
-                <textarea
-                  id="input-field06"
-                  cols="30"
-                  rows="1"
-                  placeholder="6. Bullet Points...."
-                  name="bulletPoint06"
-                ></textarea>
-              </div>
-
-              <div class="dashboard03">
-                <div class="listingInputWrapper">
-                  <p style="color: #000;">Upload Listing Image</p>
-                  <input
-                    id="ImgUploadButton"
-                    type="file"
-                    name="file"
-                    multiple="multiple"
-                  />
-                </div>
-              </div>
-              <div class="dashboard04">
-                <textarea
-                  name="price"
-                  id="brandDetail-input0"
-                  onchange="brandDetailInput(event)"
-                  cols="30"
-                  rows="1"
-                  placeholder="1. Price...."
-                ></textarea>
-                <textarea
-                  name="brandName"
-                  id="brandDetail-input01"
-                  onchange="brandDetailInput(event)"
-                  cols="30"
-                  rows="1"
-                  placeholder="1. Brand...."
-                ></textarea>
-                <textarea
-                  name="itemForm"
-                  id="brandDetail-input02"
-                  onchange="brandDetailInput(event)"
-                  cols="30"
-                  rows="1"
-                  placeholder="2. Item Form...."
-                ></textarea>
-                <textarea
-                  name="manufacture"
-                  id="brandDetail-input03"
-                  onchange="brandDetailInput(event)"
-                  cols="30"
-                  rows="1"
-                  placeholder="3. Manufacturer...."
-                ></textarea>
-                <textarea
-                  name="quantity"
-                  id="brandDetail-input04"
-                  onchange="brandDetailInput(event)"
-                  cols="30"
-                  rows="1"
-                  placeholder="4. Item Package Quantity...."
-                ></textarea>
-                <textarea
-                  name="PackageInfo"
-                  id="brandDetail-input05"
-                  onchange="brandDetailInput(event)"
-                  cols="30"
-                  rows="1"
-                  placeholder="4. Package Information...."
-                ></textarea>
-              </div>
-              <div class="dashboard05">
-                <div class="listingInputWrapper">
-                  <p style="color: #000;">Upload A+ Image</p>
-                  <input
-                    id="ImgUploadButton"
-                    type="file"
-                    name="APlusFile"
-                    multiple="multiple"
-                  />
-                </div>
-              </div>
-              <input
-                style="
-                  width: 60%;
-                  font-size: 1rem;
-                  padding: 1rem;
-                  margin: 5px 10px 10px 10px;
-                  cursor: pointer;
-                  background: #000;
-                  color: #fff;
-                  border: none;
-                  border-radius: 8px;
-                "
-                type="submit"
-                value="Submit Content"
-              />
-            </form>
-          </div>
-        </main>
-        <div class="AplusImage"></div>
-      </div>
-      <!-- End Product code -->
-      <!-- -------------------------START OF RECENT ORDERS ---------------------- -->
       <div class="right">
         <div class="top">
           <button id="menu-btn">
