--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,6 +71,7 @@
         <li>Gift Cards</li>
         <li>Browsing History</li>
         <li>Registry</li>
+        <li id="dashboardLink"><a href="/user/dashboard">Dashboard</a></li>
         <li style="position: absolute; right: 0; top: 0%">
           <a
             href="/logout"
