--- a/views/Preview.ejs
+++ b/views/Preview.ejs
@@ -56,6 +56,7 @@
         <li>Gift Cards</li>
         <li>Browsing History</li>
         <li>Registry</li>
+        <li id="dashboardLink"><a href="/user/dashboard">Dashboard</a></li>
       </ul>
     </div>
 
