--- a/views/login.ejs
+++ b/views/login.ejs
@@ -90,6 +90,19 @@
           />
         </div>
         <button type="submit">Login</button>
+        <div
+          style="
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row-reverse;
+            width: 43%;
+          "
+          class="form-group"
+        >
+          <label style="width: 100%;margin-left: 10px;" for="remember">Remember me</label>
+          <input style="width: 5%" type="checkbox" name="rememberMe" />
+        </div>
         <div class="register-link">
           <p>Don't have an account?</p>
           <a href="/register" class="btn btn-secondary">Register</a>
