--- a/views/AdminPanel.ejs
+++ b/views/AdminPanel.ejs
@@ -60,7 +60,7 @@
             <i class="material-icons">add</i>
             <h3>Add Product</h3>
           </a>
-          <a href="/admin/login">
+          <a href="/login">
             <i class="material-icons">logout</i>
             <h3>Log Out</h3>
           </a>
