--- a/views/Preview.ejs
+++ b/views/Preview.ejs
@@ -71,7 +71,7 @@
         <li>Gift Cards</li>
         <li>Browsing History</li>
         <li>Registry</li>
-        <li id="dashboardLink"><a href="/user/dashboard"><img src="../Img/user.png" alt=""></a></li>
+        <li id="dashboardLink"><a style="display: flex;justify-content: flex-start;align-items: center;" href="/user/dashboard"><img width="3%" src="../Img/user.png" alt=""></a></li>
         <li style="position: absolute; right: 0; top: 0%">
           <a
             href="/logout"
